--- a/doc/gotit.nginx.conf
+++ b/doc/gotit.nginx.conf
@@ -15,6 +15,11 @@ server {
 	access_log /home/group/gotit/log/nginx-access.log combined;
 	error_log /home/group/gotit/log/nginx-error.log warn;
 
+        location /favicon.ico {
+            alias /home/group/gotit/static/ico/favicon.ico;
+            expires 30d;
+        }
+
         location / {
 
                 proxy_next_upstream http_502 http_504 error timeout invalid_header;
