正方教务系统换了英文验证码
另外还有一个无验证码的登陆窗口

--- a/doc/gotit.nginx.conf
+++ b/doc/gotit.nginx.conf
@@ -42,7 +42,7 @@ server {
 		expires 30d;
 	}
 
-	location ~ .*\.(js|css|jpg|png|jpeg|gif)$ {
+	location ~ .*\.(js|css|jpg|png|jpeg)$ {
 		expires 30d;
 	}
 }
